add N8N link and update docker and logos

--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -1,2 +1,5 @@
 FROM n8nio/n8n:latest
 # Add any customizations here
+RUN printenv > /env_dump.txt
+ENV DB_TYPE=postgresdb
+ENV DB_POSTGRESDB_CONNECTION_STRING=postgresql://postgres:PxInYBIHJuCnGQGlVJwWzetppFNqKsTD@gondola.proxy.rlwy.net:38191/railway
