--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -1,5 +1,7 @@
 FROM n8nio/n8n:latest
 # Add any customizations here
-RUN printenv > /env_dump.txt
+
 ENV DB_TYPE=postgresdb
 ENV DB_POSTGRESDB_CONNECTION_STRING=postgresql://postgres:PxInYBIHJuCnGQGlVJwWzetppFNqKsTD@gondola.proxy.rlwy.net:38191/railway
+
+CMD printenv && <your usual CMD here>
