--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -1,4 +1,24 @@
-FROM n8nio/n8n:latest
+FROM node:18-alpine
+
+ARG N8N_VERSION=1.56.1
+
+RUN apk add --update graphicsmagick tzdata
+
+USER root
+
+RUN apk --update add --virtual build-dependencies python3 build-base && \
+    npm_config_user=root npm install --location=global n8n@${N8N_VERSION} && \
+    apk del build-dependencies
+
+WORKDIR /data
+
+EXPOSE $PORT
+
+ENV N8N_USER_ID=root
+
+CMD export N8N_PORT=$PORT && n8n start
+
+# FROM n8nio/n8n:latest
 # Add any customizations here
 ENV DB_TYPE=postgresdb
 ENV DB_POSTGRESDB_CONNECTION_STRING=postgresql://postgres:PxInYBIHJuCnGQGlVJwWzetppFNqKsTD@gondola.proxy.rlwy.net:38191/railway
