--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -4,7 +4,7 @@ ARG N8N_VERSION=1.56.1
 
 RUN apk add --update graphicsmagick tzdata
 
-USER root
+USER note
 
 RUN apk --update add --virtual build-dependencies python3 build-base && \
     npm_config_user=root npm install --location=global n8n@${N8N_VERSION} && \
@@ -21,3 +21,4 @@ CMD ["n8n", "start"]
 # FROM n8nio/n8n:latest
 # Add any customizations here
 
+RUN node -e "console.log('ENV:', process.env)"
