--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -4,7 +4,7 @@ ARG N8N_VERSION=1.56.1
 
 RUN apk add --update graphicsmagick tzdata
 
-USER note
+USER node
 
 RUN apk --update add --virtual build-dependencies python3 build-base && \
     npm_config_user=root npm install --location=global n8n@${N8N_VERSION} && \
