--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -1,14 +1,13 @@
-FROM node:18-alpine
+FROM n8nio/n8n:latest
+#ARG N8N_VERSION=latest
 
-ARG N8N_VERSION=latest
+#RUN apk add --update graphicsmagick tzdata
 
-RUN apk add --update graphicsmagick tzdata
+#USER root
 
-USER root
-
-RUN apk --update add --virtual build-dependencies python3 build-base && \
-    npm_config_user=root npm install --location=global n8n@${N8N_VERSION} && \
-    apk del build-dependencies
+#RUN apk --update add --virtual build-dependencies python3 build-base && \
+#    npm_config_user=root npm install --location=global n8n@${N8N_VERSION} && \
+#    apk del build-dependencies
 
 WORKDIR /data
 
