Add Railway troubleshooting guide and update environment variables

--- a/n8n/env.example
+++ b/n8n/env.example
@@ -1,22 +1,30 @@
 # n8n Railway Environment Variables Example
-# Copy this to .env and fill in your values
+# Copy these to your n8n service variables in Railway dashboard
 
 # Basic Authentication (CHANGE THESE!)
 N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=admin
 N8N_BASIC_AUTH_PASSWORD=your-secure-password-here
 
-# Database Configuration
-# Use Railway's variable references to connect to PostgreSQL
+# Database Configuration - Method 1: Using Internal Domain
+# Replace 'postgres' with your actual PostgreSQL service name in Railway
 DB_TYPE=postgresdb
-DB_POSTGRESDB_HOST=${{RAILWAY_PRIVATE_DOMAIN}}
-DB_POSTGRESDB_DATABASE=${{PGDATABASE}}
-DB_POSTGRESDB_USER=${{PGUSER}}
-DB_POSTGRESDB_PASSWORD=${{PGPASSWORD}}
+DB_POSTGRESDB_HOST=postgres.railway.internal
 DB_POSTGRESDB_PORT=5432
+DB_POSTGRESDB_DATABASE=${{Postgres.PGDATABASE}}
+DB_POSTGRESDB_USER=${{Postgres.PGUSER}}
+DB_POSTGRESDB_PASSWORD=${{Postgres.PGPASSWORD}}
 
-# Alternative: Use DATABASE_URL directly
-# DATABASE_URL=${{DATABASE_URL}}
+# Database Configuration - Method 2: Reference PostgreSQL Variables
+# DB_TYPE=postgresdb
+# DB_POSTGRESDB_HOST=${{Postgres.PGHOST}}
+# DB_POSTGRESDB_PORT=${{Postgres.PGPORT}}
+# DB_POSTGRESDB_DATABASE=${{Postgres.PGDATABASE}}
+# DB_POSTGRESDB_USER=${{Postgres.PGUSER}}
+# DB_POSTGRESDB_PASSWORD=${{Postgres.PGPASSWORD}}
+
+# Database Configuration - Method 3: Use DATABASE_URL directly
+# DATABASE_URL=${{Postgres.DATABASE_URL}}
 
 # n8n Configuration
 NODE_FUNCTION_ALLOW_EXTERNAL=*
@@ -28,6 +36,9 @@ N8N_PORT=${{PORT}}
 
 # Optional: Disable file permissions warning
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
+
+# Optional: Set execution mode
+EXECUTIONS_MODE=regular
 
 # Optional: Webhook URL (if you have a custom domain)
 # WEBHOOK_URL=https://your-domain.com/
